added name of author

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
     <body class="container mt-5">
-        <h1 class="display-2">Embracing Digital Transformation: Unleashing the Power of Big Data</h1>
+        <h1 class="display-6">Embracing Digital Transformation: Unleashing the Power of Big Data</h1>
+        <p class="text-muted">By Jeff Ureta</p>
         <div class="card mb-4">
             <div class="card-body">
                 <h2 class="card-title">Introduction</h2>
